<resources>
    <string name="app_name">MAD_PROJECT_INTERN</string>
    <string name="register">REGISTER</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="create_a_password">Create a password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_account">Create Account</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="loginA">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_news_letter">NewsLetter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="newsletter">Newsletter</string>
    <string name="subscribe_to_our_newsletter_and_get_notified_about_new_job_listings">Subscribe to our newsletter and get notified about new job listings</string>
    <string name="email">Email</string>
    <string name="job_role">Job Role</string>
    <string name="submit">Submit</string>
    <string name="user_name_or_email">User Name or Email</string>
    <string name="password">Password</string>
    <string name="title_activity_wish_list">wishList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company Name</string>
    <string name="loading_data">Loading Data...</string>
    <string name="companyName">Company Name</string>
    <string name="country">Country</string>
</resources>